--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lib:style": "npx mkdirp lib/community-edition && npx mkdirp lib/enterprise-edition && node ./scripts/lib-style.js && npm run lib:postcss && cp lib/community-edition/index.css lib/enterprise-edition && cp lib/community-edition/base.css lib/enterprise-edition && cp -R lib/community-edition/theme lib/enterprise-edition",
     "lib:postcss": "postcss lib/community-edition --replace --config .config",
     "copy-files": "cp package.json lib/community-edition && cp package.json lib/enterprise-edition && cp ./community-edition/README.md ./lib/community-edition && cp ./enterprise-edition/README.md ./lib/enterprise-edition && cp ./community-edition/LICENSE.md ./lib/community-edition && cp ./enterprise-edition/LICENSE.md ./lib/enterprise-edition && cp .npmignore ./lib/community-edition && cp .npmignore ./lib/enterprise-edition",
+    "copy-style": "cp -r ./community-edition/style ./lib/community-edition/style && cp -r ./enterprise-edition/style ./lib/enterprise-edition",
     "inject-license-header": "sh .config/community-licensify.sh && sh .config/enterprise-licensify.sh",
     "update-timestamp": "node ./scripts/updateTimestamp.js",
     "//**** babel compilation": "****//",
@@ -28,7 +29,7 @@
     "babel:community": "BABEL_ENV=production babel community-edition -d lib/community-edition",
     "babel:enterprise": "BABEL_ENV=production babel enterprise-edition -d lib/enterprise-edition",
     "//**** build": "****//",
-    "build": "npm run doctoc && (npm run tsc || true) && rimraf lib && npm run lib:style && npm run babel && npm run copy-files && npm run build:package && npm run tsc-gen-declarations && npm run inject-license-header",
+    "build": "npm run doctoc && (npm run tsc || true) && rimraf lib && npm run lib:style && npm run babel && npm run copy-files && npm run copy-style && npm run build:package && npm run tsc-gen-declarations && npm run inject-license-header",
     "build:package": "npm run build:package:community && npm run build:package:enterprise",
     "build:package:community": "node ./scripts/cli/update-package --module=community-edition --edition=community",
     "build:package:enterprise": "node ./scripts/cli/update-package --module=enterprise-edition --edition=enterprise",
