implement scss files copying

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lib:style": "npx mkdirp lib/community-edition && npx mkdirp lib/enterprise-edition && node ./scripts/lib-style.js && npm run lib:postcss && cp lib/community-edition/index.css lib/enterprise-edition && cp lib/community-edition/base.css lib/enterprise-edition && cp -R lib/community-edition/theme lib/enterprise-edition",
     "lib:postcss": "postcss lib/community-edition --replace --config .config",
     "copy-files": "cp package.json lib/community-edition && cp package.json lib/enterprise-edition && cp ./community-edition/README.md ./lib/community-edition && cp ./enterprise-edition/README.md ./lib/enterprise-edition && cp ./community-edition/LICENSE.md ./lib/community-edition && cp ./enterprise-edition/LICENSE.md ./lib/enterprise-edition && cp .npmignore ./lib/community-edition && cp .npmignore ./lib/enterprise-edition",
-    "copy-style": "cp -r ./community-edition/style ./lib/community-edition/style && cp -r ./enterprise-edition/style ./lib/enterprise-edition",
+    "copy-style": "copyfiles \"community-edition/**/*.scss\" lib",
     "inject-license-header": "sh .config/community-licensify.sh && sh .config/enterprise-licensify.sh",
     "update-timestamp": "node ./scripts/updateTimestamp.js",
     "//**** babel compilation": "****//",
@@ -113,6 +113,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-app": "^7.0.2",
     "chalk": "^2.3.2",
+    "copyfiles": "^2.4.1",
     "cpy-cli": "^3.0.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
